tests/neg/toplevel-privates/Test.scala
package p

val x1 = x    // error

val y1 = y    // ok

val xx1 = xx  // ok

val yy1 = yy  // ok

val c = new C // ok